--- a/src/main/resources/templates/displayLocation.html
+++ b/src/main/resources/templates/displayLocation.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
 
-This is a webpage.iha
+<h2>Locations:</h2>
+
+
+
+
 </body>
 </html>
