header fragment to add FE dependencies through it

--- a/src/main/resources/templates/createLocation.html
+++ b/src/main/resources/templates/createLocation.html
@@ -1,31 +1,29 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Create Location</title>
+    <div th:insert="header.html :: header"></div>
 </head>
-    <script src="webjars/jquery/3.3.0/jquery.min.js"></script>
-    <script src="webjars/bootstrap/4.1.0/js/bootstrap.js"></script>
-    <link rel="stylesheet"
-      href="webjars/bootstrap/4.1.0/css/bootstrap.min.css" />
 <body>
-<form action="saveLocation" method="post">
-    <pre>
-    Id: <input type="text" name="id"/>
-    Code: <input type="text" name="code"/>
-    Name: <input type="text" name="name"/>
-    Type: Urban <input type="radio" name="type" value="URBAN"/>
-          Rural <input type="radio" name="type" value="RURAL"/>
-    <input type="submit" value="save"/>
-    </pre>
-</form>
-<span th:text="${msg}"></span>
+<div class="container-fluid m-15">
+    <form action="saveLocation" method="post">
+        <pre>
+        Id: <input type="text" name="id"/>
+        Code: <input type="text" name="code"/>
+        Name: <input type="text" name="name"/>
+        Type: Urban <input type="radio" name="type" value="URBAN"/>
+              Rural <input type="radio" name="type" value="RURAL"/>
+        <input type="submit" value="save"/>
+        </pre>
+    </form>
 
-<a th:href="displayLocation">View All</a>
+    <p th:text="${msg}"></p>
 
-<div class="alert alert-primary" role="alert">
-    A simple primary alert—check it out!
+    <a th:href="displayLocation"></a>
+
+    <div class="alert alert-primary" role="alert">
+        A simple primary alert—check it out!
+    </div>
+
 </div>
-
 </body>
 </html>
