--- a/src/main/resources/templates/displayLocation.html
+++ b/src/main/resources/templates/displayLocation.html
@@ -1,15 +1,30 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <div th:insert="header.html :: header"></div>
 </head>
 <body>
 
-<h2>Locations:</h2>
-
-
-
+<div class="container-fluid m-15">
+    <h2>Locations:</h2>
+    <table>
+        <tr>
+            <th>id</th>
+            <th>code</th>
+            <th>name</th>
+            <th>type</th>
+        </tr>
+        <th:block th:each="location : ${locations}">
+            <tr>
+                <td>[[${location.id}]]</td>
+                <td>[[${location.code}]]</td>
+                <td>[[${location.name}]]</td>
+                <td>[[${location.type}]]</td>
+            </tr>
+        </th:block>
+    </table>
+</div>
 
 </body>
 </html>
