Add Location link on the Location View page

--- a/src/main/resources/templates/createLocation.html
+++ b/src/main/resources/templates/createLocation.html
@@ -18,7 +18,7 @@
 
     <p th:text="${msg}"></p>
 
-    <a th:href="displayLocation"></a>
+    <a th:href="@{displayLocation}">View all</a>
 
     <div class="alert alert-primary" role="alert">
         A simple primary alert—check it out!
