--- a/src/main/resources/templates/displayLocation.html
+++ b/src/main/resources/templates/displayLocation.html
@@ -24,7 +24,8 @@
             </tr>
         </th:block>
     </table>
-</div>
 
+    <a th:href="@{showCreate}">Add Location</a>
+</div>
 </body>
 </html>
