--- a/src/main/resources/templates/displayLocation.html
+++ b/src/main/resources/templates/displayLocation.html
@@ -8,21 +8,27 @@
 
 <div class="container-fluid m-15">
     <h2>Locations:</h2>
-    <table>
-        <tr>
-            <th>id</th>
-            <th>code</th>
-            <th>name</th>
-            <th>type</th>
-        </tr>
-        <th:block th:each="location : ${locations}">
+    <table class="table table-striped table-bordered table-hover table-sm" style="width: 60%">
+        <thead class="thead-dark">
             <tr>
-                <td>[[${location.id}]]</td>
-                <td>[[${location.code}]]</td>
-                <td>[[${location.name}]]</td>
-                <td>[[${location.type}]]</td>
+                <th>id</th>
+                <th>code</th>
+                <th>name</th>
+                <th>type</th>
+                <th></th>
             </tr>
-        </th:block>
+        </thead>
+        <tbody>
+            <th:block th:each="location : ${locations}">
+                <tr>
+                    <td>[[${location.id}]]</td>
+                    <td>[[${location.code}]]</td>
+                    <td>[[${location.name}]]</td>
+                    <td>[[${location.type}]]</td>
+                    <td><a th:href="@{deleteLocation?id=__${location.id}__}">delete</a></td>
+                </tr>
+            </th:block>
+        </tbody>
     </table>
 
     <a th:href="@{showCreate}">Add Location</a>
