--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -5,5 +5,6 @@
     <script src="webjars/bootstrap/4.1.0/js/bootstrap.js"></script>
     <link rel="stylesheet"
           href="webjars/bootstrap/4.1.0/css/bootstrap.min.css" />
-
+    <link rel="stylesheet"
+          th:href="@{/global_styles.css}" />
 </span>
