--- a/src/main/resources/templates/displayLocation.html
+++ b/src/main/resources/templates/displayLocation.html
@@ -26,6 +26,7 @@
                     <td>[[${location.name}]]</td>
                     <td>[[${location.type}]]</td>
                     <td><a th:href="@{deleteLocation?id=__${location.id}__}">delete</a></td>
+                    <td><a th:href="@{showUpdate?id=__${location.id}__}">update</a></td>
                 </tr>
             </th:block>
         </tbody>
